--- a/snippets/breadcrumbs.liquid
+++ b/snippets/breadcrumbs.liquid
@@ -67,7 +67,7 @@
     }
 
     .palette-two .breadcrumbs__name {
-      color: var(--color-outline-2, #F4B841);
+      color: var(--color-outline-2, #53C787);
     }
   {% endstyle %}
 
