--- a/snippets/date-picker.liquid
+++ b/snippets/date-picker.liquid
@@ -38,7 +38,7 @@
       {%- if settings.primary_color_2 != blank -%}
         --date-picker-text-color: var(--color-primary-2, #FFFFFF);
         --date-picker-placeholder-color: var(--color-placeholder-2, #FFFFFF59);
-        --date-picker-section-border: 1px solid var(--color-border-2, #FFFFFF26);
+        --date-picker-section-border: 1px solid var(--color-border-2, #FFFFFF47);
       {%- endif -%}
 
       {%- if settings.accent_background_2 != blank -%}
@@ -47,9 +47,9 @@
       {%- endif -%}
 
       {%- if settings.accent_color_2 != blank -%}
-        --date-picker-icon-color: var(--background-accent-2, #1A3333);
-        --date-picker-cleanstate-text-color: var(--background-accent-2, #1A3333);
-        --color-accent-foreground: var(--background-accent-2, #1A3333);
+        --date-picker-icon-color: var(--color-accent-2, #1A3333);
+        --date-picker-cleanstate-text-color: var(--color-accent-2, #1A3333);
+        --color-accent-foreground: var(--color-accent-2, #1A3333);
       {%- endif -%}
     {%- endif -%}
   }
