--- a/snippets/variables-cart-lines.liquid
+++ b/snippets/variables-cart-lines.liquid
@@ -60,11 +60,11 @@
       {% endif %}
 
       {% if settings.accent_background_2 != blank %}
-        --line-toggle-color: var(--background-accent-2, #F4B841);
+        --line-toggle-color: var(--background-accent-2, #FFFFFF);
       {% endif %}
 
       {% if settings.accent_outline_2 != blank %}
-        --line-icon-color: var(--color-outline-2, #F4B841);
+        --line-icon-color: var(--color-outline-2, #53C787);
       {% endif %}
     {% endif %}
   }
