--- a/snippets/variables-product-gallery.liquid
+++ b/snippets/variables-product-gallery.liquid
@@ -35,12 +35,12 @@
       {%- endif -%}
 
       {%- if settings.accent_background_2 != blank -%}
-        --product-gallery-control-background-color: var(--background-accent-2, #F4B841);
-        --product-gallery-active-thumbnail-border: 1px solid var(--background-accent-2, #F4B841);
+        --product-gallery-control-background-color: var(--background-accent-2, #FFFFFF);
+        --product-gallery-active-thumbnail-border: 1px solid var(--background-accent-2, #FFFFFF);
       {%- endif -%}
 
       {%- if settings.accent_color_2 != blank -%}
-        --product-gallery-control-icon-color: var(--color-accent-2, #0B1A26);
+        --product-gallery-control-icon-color: var(--color-accent-2, #1A3333);
       {%- endif -%}
     {%- endif -%}
   }
