--- a/snippets/variables-product-quantity.liquid
+++ b/snippets/variables-product-quantity.liquid
@@ -42,11 +42,11 @@
       {%- endif -%}
 
       {%- if settings.accent_background_2 != blank -%}
-        --add-button-button-color: var(--background-accent-2, #F4B841);
+        --add-button-button-color: var(--background-accent-2, #FFFFFF);
       {%- endif -%}
 
       {%- if settings.accent_color_2 != blank -%}
-        --add-button-button-label-color: var(--color-accent-2, #0B1A26);
+        --add-button-button-label-color: var(--color-accent-2, #1A3333);
       {%- endif -%}
     {%- endif -%}
   }
