--- a/snippets/variables-mini-cart.liquid
+++ b/snippets/variables-mini-cart.liquid
@@ -32,15 +32,15 @@
       {%- endif -%}
 
       {%- if settings.accent_background_2 != blank -%}
-        --minicart-button-accent-color: var(--background-accent-2, #F4B841);
+        --minicart-button-accent-color: var(--background-accent-2, #FFFFFF);
       {%- endif -%}
 
       {% if settings.accent_color_2 != blank %}
-        --minicart-button-badge-color: var(--color-accent-2, #FFFFFF);
+        --minicart-button-badge-color: var(--color-accent-2, #1A3333);
       {% endif %}
 
       {%- if settings.accent_outline_2 != blank -%}
-        --minicart-button-hover-color: var(--color-outline-2-hover, #F4B841CC);
+        --minicart-button-hover-color: var(--color-outline-2-hover, #53C787CC);
       {%- endif -%}
     {%- endif -%}
   }
