Date picker CSS variables correction

--- a/snippets/date-picker.liquid
+++ b/snippets/date-picker.liquid
@@ -25,9 +25,9 @@
       {%- endif -%}
 
       {%- if settings.accent_color != blank -%}
-        --date-picker-icon-color: var(--background-accent, #FFFFFF);
-        --date-picker-cleanstate-text-color: var(--background-accent, #FFFFFF);
-        --color-accent-foreground: var(--background-accent, #FFFFFF);
+        --date-picker-icon-color: var(--color-accent, #FFFFFF);
+        --date-picker-cleanstate-text-color: var(--color-accent, #FFFFFF);
+        --color-accent-foreground: var(--color-accent, #FFFFFF);
       {%- endif -%}
 
     {%- elsif color_palette == "two" -%}
