--- a/assets/form.css
+++ b/assets/form.css
@@ -112,7 +112,7 @@
 
 .form__info .success {
   background: var(--color-azureish-white, #D7E2FF);
-  color: var(--color-black, #0B1A26);
+  color: var(--color-black, #1A3333);
 }
 
 .form__info .success i {
