--- a/sections/404.liquid
+++ b/sections/404.liquid
@@ -57,7 +57,7 @@
     <div class="error-404__title">404</div>
 
     {%- if description != blank -%}
-      <div class="error-404__description">
+      <div class="error-404__description bq-content rx-content">
         {{- description -}}
       </div>
     {%- endif -%}
