--- a/sections/call-to-action.liquid
+++ b/sections/call-to-action.liquid
@@ -74,7 +74,7 @@
         {%- endif -%}
 
         {%- if description != blank -%}
-          <div class="cta__header-description">{{- description -}}</div>
+          <div class="cta__header-description bq-content rx-content">{{- description -}}</div>
         {%- endif -%}
 
         {%- if button_1 != blank or button_2 != blank -%}
