--- a/sections/columns.liquid
+++ b/sections/columns.liquid
@@ -100,7 +100,7 @@
                 {%- endif -%}
 
                 {%- if text != blank -%}
-                  <div class="columns__description">{{- text -}}</div>
+                  <div class="columns__description bq-content rx-content">{{- text -}}</div>
                 {%- endif -%}
 
                 {%- if button_label != blank -%}
