--- a/sections/hero-search.liquid
+++ b/sections/hero-search.liquid
@@ -97,7 +97,7 @@
 
       {%- if results_count == 0 -%}
         {%- if message != blank -%}
-          <div class="hero__message">{{- message -}}</div>
+          <div class="hero__message bq-content rx-content">{{- message -}}</div>
         {%- endif -%}
 
         {%- if button_label != blank -%}
