--- a/sections/images.liquid
+++ b/sections/images.liquid
@@ -300,7 +300,7 @@
                         {%- endif -%}
 
                         {%- if description != blank -%}
-                          <div class="images__description text-medium">{{- description | truncate: 150, " ..." -}}</div>
+                          <div class="images__description text-medium bq-content rx-content">{{- description | truncate: 150, " ..." -}}</div>
                         {%- endif -%}
 
                         {%- if button_1 != blank or button_2 != blank -%}
