--- a/sections/testimonials.liquid
+++ b/sections/testimonials.liquid
@@ -142,7 +142,7 @@
 
                           {%- if description != blank -%}
                             <blockquote class="testimonials__blockquote text-medium">
-                              <q class="testimonials__quote">
+                              <q class="testimonials__quote bq-content rx-content">
                                 {{- description -}}
                               </q>
 
