--- a/sections/title.liquid
+++ b/sections/title.liquid
@@ -75,7 +75,7 @@
           {%- endif -%}
 
           {%- if description != blank -%}
-            <div class="title__description">{{- description -}}</div>
+            <div class="title__description bq-content rx-content">{{- description -}}</div>
           {%- endif -%}
         </div>
 
