--- a/sections/top-bar.liquid
+++ b/sections/top-bar.liquid
@@ -68,7 +68,7 @@
         {%- endif -%}
       </div>
 
-      <span class="top-bar__text">
+      <span class="top-bar__text bq-content rx-content">
         {%- if bar_message != blank -%}
           {{- bar_message -}}
         {%- endif -%}
