--- a/snippets/form.liquid
+++ b/snippets/form.liquid
@@ -41,7 +41,7 @@
     {%- endif -%}
   </h2>
 
-  <div class="form__text">
+  <div class="form__text bq-content rx-content">
     {%- if description != blank -%}
       {{- description -}}
     {%- else -%}
