--- a/snippets/icon-arrow-right-full.liquid
+++ b/snippets/icon-arrow-right-full.liquid
@@ -1,1 +1,1 @@
-<svg fill="none" viewBox="0 0 16 17" xmlns="http://www.w3.org/2000/svg"><path d="m8 .128418-1.41 1.410002 5.58 5.59h-12.17v2h12.17l-5.58 5.58998 1.41 1.41 8-7.99998z" fill="#0b1a26"/></svg>
+<svg fill="none" viewBox="0 0 16 17" xmlns="http://www.w3.org/2000/svg"><path d="m8 .128418-1.41 1.410002 5.58 5.59h-12.17v2h12.17l-5.58 5.58998 1.41 1.41 8-7.99998z" fill="#1A3333"/></svg>
