--- a/snippets/variables-cart-services.liquid
+++ b/snippets/variables-cart-services.liquid
@@ -2,7 +2,7 @@
   bq-cart-services {
     line-height: var(--line-height-sm, 1.2);
     --services-container-background: var(--color-azureish-white, #D7E2FF);
-    --services-text-color: var(--color-black, #0B1A26);
+    --services-text-color: var(--color-black, #1A3333);
     --services-container-padding: 16px;
     --services-container-border-radius: var(--border-radius, 0);
     --service-title-font-size: 18px;
