--- a/assets/base.css
+++ b/assets/base.css
@@ -24,8 +24,8 @@
   /* Colors */
   --color-azureish-white: #D7E2FF;
   --color-begonia: #FF6E6E;
-  --color-black: #0B1A26;
-  --color-black-08: #0B1A2614;
+  --color-black: #1A3333;
+  --color-black-08: #1A333314;
   --color-green: #51C234;
   --color-red: #C23434;
   --color-red-light: #F5CFCF;
@@ -226,7 +226,7 @@ h3,
 
 h4,
 .h4 {
-  font-size: var(--font-size-h4, 40px);
+  font-size: 40px;
   line-height: 1.3;
   letter-spacing: -0.05em;
   font-weight: var(--font-weight-bold, 700);
@@ -234,7 +234,7 @@ h4,
 
 h5,
 .h5{
-  font-size: var(--font-size-h5, 24px);
+  font-size: 24px;
   line-height: 1.4;
   letter-spacing: -0.04em;
   font-weight: var(--font-weight-bold, 700);
@@ -242,7 +242,7 @@ h5,
 
 h6,
 .h6 {
-  font-size: var(--font-size-h6, 20px);
+  font-size: 20px;
   line-height: 1.4;
   letter-spacing: -0.02em;
   font-weight: var(--font-weight-bold, 700);
@@ -483,11 +483,6 @@ img {
   .container {
     padding: 0 var(--horizontal-padding, 64px);
   }
-
-  .touch[data-orientation='landscape'] .container {
-    padding-left: calc(44px + var(--horizontal-padding, 64px));
-    padding-right: calc(44px + var(--horizontal-padding, 64px));
-  }
 }
 
 .overflow-hidden {
@@ -520,7 +515,7 @@ img {
 }
 
 [data-focus="true"] {
-  box-shadow: 0 0 0 3px #F4B84199;
+  box-shadow: 0 0 0 3px var(--color-outline, #53C787);
 }
 
 .tippy-box *,
