--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -69,7 +69,7 @@
       {%- endif -%}
 
       {%- if custom_description != blank -%}
-        <div class="hero__description text-medium">{{- custom_description -}}</div>
+        <div class="hero__description text-medium bq-content rx-content">{{- custom_description -}}</div>
       {%- else -%}
         {%- if page_description != blank -%}
           <div class="hero__description text-medium">{{- page_description -}}</div>
