--- a/sections/text-with-image.liquid
+++ b/sections/text-with-image.liquid
@@ -151,7 +151,7 @@
         {%- endif -%}
 
         {%- if description != blank -%}
-          <div class="text-image__description">{{- description -}}</div>
+          <div class="text-image__description bq-content rx-content">{{- description -}}</div>
         {%- endif -%}
 
         {%- if button_1 != blank or button_2 != blank -%}
