--- a/snippets/accordion-block.liquid
+++ b/snippets/accordion-block.liquid
@@ -52,7 +52,7 @@
         {%- endif -%}
 
         {%- if content != blank -%}
-          <div class="accordion-block__content">
+          <div class="accordion-block__content bq-content rx-content">
             <p>{{- content -}}</p>
           </div>
         {%- endif -%}
